2007-04-22  Paolo Borelli  <pborelli@katamail.com>

	 * gtksourceview/gtksourcelanguage.c:
	 * gtksourceview/gtksourcestylemanager.c:
	 * gtksourceview/gtksourcebuffer.c:
	 * gtksourceview/gtksourceview.c:
	 * gtksourceview/gtksourcelanguagemanager.c:
	 * gtksourceview/gtksourceundomanager.c:

	Use G_TYPE_INSTANCE_GET_PRIVATE in every object

2007-04-22  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguage.c:
	* gtksourceview/gtksourcelanguage.h:

	Add utility methods to get mime_types and globs, rename
	get_property to get_metadata in order to not conflict
	with gpbject's get_property in language bindings.

2006-04-22  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.[ch]: turned can-undo and can-redo into
        properties.
	* gtksourceview/gtksourcelanguage.c: corrected gtk-doc comment.

2006-04-22  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/regex/eggregex.c (egg_regex_fetch_named): avoid
	compiler warning.
	* gtksourceview/gtksourceview-utils.h,
	gtksourceview/gtksourceview-utils.c: new files, common code from StyleManager
	and LanguageManager.
	* gtksourceview/gtksourcelanguagemanager.[ch]: renamed 'lang-files-dirs'
	property to 'search-path', as in StyleManager; renamed setter/getter accordingly.
	* gtksourceview/gtksourcestylemanager.[ch]: made it use gtksourceview-utils;
	removed append/prepend_search_path.
	* gtksourceview/gtksourcestylescheme.h: added padding members to
	GtkSourceStyleSchemeClass structure.
	* gtksourceview/gtksourcebuffer.c,
	gtksourceview/gtksourceiter.h: removed gtk_source_iter_find_matching_bracket.
	* gtksourceview/Makefile.am: made it compare newly generated
	gtksourceview-typebuiltins against existing ones, to avoid recompilation
	after changing Makefile.

2006-04-22  Yevgen Muntyan  <muntyan@tamu.edu>

	* docs/: added some autogenerated files back; made docs build again.

2006-04-21  Yevgen Muntyan  <muntyan@tamu.edu>

	* docs/: removed autogenerated files.
